# rust-dreamstar

./: .gitignore  README.md  start.bat
back-end/: Cargo.toml  Procfile  README.md  Rocket.toml  log4rs_dev.yml  log4rs_prod.yml  rust-toolchain.toml
back-end/src/: config.rs  db.rs  fairings.rs  main.rs
back-end/src/db_models/: AdStats.rs  News.rs  PayCycle.rs  Report.rs  invitation.rs  matches.rs  mod.rs  user.rs  votes.rs
back-end/src/middleware/: mod.rs  recaptcha_verify.rs  verify_token.rs
back-end/src/models/: error_response.rs  mod.rs  user_card.rs
back-end/src/routes/admin/: battle.rs  mod.rs  user.rs
back-end/src/routes/auth/: google.rs  instagram.rs  invitation.rs  login.rs  mod.rs  reset_password.rs  signup.rs
back-end/src/routes/battle/: battle_main.rs  callout.rs  live_battle.rs  live_battle_main.rs  mod.rs  response.rs
back-end/src/routes/user/: profile.rs
back-end/src/routes/vote/: vote.rs
back-end/src/services/: email.rs
back-end/src/tests/utils/: util.rs
back-end/src/utils/: cron.rs  live_battle_cron.rs  mod.rs  recaptcha.rs  util.rs  validation.rs
front-end/: Cargo.toml  Dioxus.toml  README.md
front-end/assets/: adminHeader.js  canvas.js  main.css  main.js  manifest.json  sw.js  tailwind.css
front-end/src/: config.rs  main.rs
front-end/src/components/: mod.rs
front-end/src/components/element/: mod.rs  pagination.rs  user_card.rs
front-end/src/pages/: mod.rs  page_not_found.rs  policy.rs
front-end/src/pages/admin/: battle.rs  mod.rs  user.rs
front-end/src/pages/auth/: forget_pass.rs  google_login.rs  instagram_login.rs  invitation.rs  login.rs  mod.rs  signup.rs
front-end/src/pages/battle/: callout.rs  live_battle.rs  live_battle_show.rs  main_menu.rs  matchs.rs  mod.rs  response.rs
front-end/src/pages/layout/: footer.rs  header.rs  layout.rs  loading.rs  mod.rs  notification.rs  progress.rs
front-end/src/pages/user/: badge.rs  mod.rs  profile.rs
front-end/src/router/: mod.rs  router.rs
front-end/src/utils/: js_binding.rs  mod.rs  request.rs  storage.rs  time.rs  util.rs  validation.rs
(+26 files in other folders)
