[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = { version = "2.2.1", default-features = false, features = ["async-std-runtime"]}
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
bcrypt = "0.13.0"
chrono = "0.4.19"
jsonwebtoken = "8.1.0"
base64 = "0.13.0"
regex = "1.5.6"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
schemars = "0.8.10"
okapi = { version = "0.7.0-rc.1" }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger"] }
rocket_contrib = "0.4.11"
dotenv = "0.15.0"
validator = "0.18.1"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
rand ={ version = "0.8.5" }
lettre = "0.11.7"
serde_json = "1.0.117"
oauth2 = { version = "4.4.2", features = ["reqwest"] }
log = "0.4.21"
env_logger = "0.11.3"
flexi_logger = "0.28.1"
log4rs = "1.3.0"
parking_lot = "0.12.3"
mime = "0.3.17"
rocket-multipart-form-data = "0.10.7"
google-cloud-storage = "0.18.0"
gcloud = "0.1.4"
tokio-cron-scheduler = "0.10.2"
once_cell = "1.19.0"
dotenv_codegen = "0.15.0"
json5 = "0.4.1"
