[package]
name = "frontend"
version = "0.1.0"
authors = ["goodwork0903 <solomon21century@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }
tracing = "0.1.40"
dioxus-logger = "0.5.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4.42"
log = "0.4.21"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["json"] }
serde_json = "1.0.117"
web-sys = { version = "0.3", features = ["Window", "Storage"] }
base64 = "0.22.1"
js-sys = "0.3.69"
chrono = "0.4.38"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
gloo-timers = "0.3.0"
